--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,13 @@ spring:
 wmtipp:
   admin:
     login: admin
-    password: wichtig
+    password: geheim
     
 ---
 spring:
   profiles: filedb
   datasource:
-    url: jdbc:h2:file:C:\Users\JannisLaptop\Dropbox\studieren\softwareengineeniring\praktikum\test.db
+    url: jdbc:h2:file:=.\test.db
     username: sa
     password:
     driverClassName: org.h2.Driver
